--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Artic</string>
     <string name="home_welcome">안녕하세요,\n오늘의 아티클을 읽어보세요</string>
     <string name="home_search_hint">어떤 아티클이 궁금하신가요?</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
