--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_archive">새로운 아카이브</string>
+    <string name="network_error">서버에서 데이터를 받아오는데 문제가 있습니다 ㅠ</string>
 </resources>
