--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_archive">새로운 아카이브</string>
     <string name="network_error">서버에서 데이터를 받아오는데 문제가 있습니다 ㅠ</string>
+    <string name="home_title">당신이 찾는 모든 지식 콘텐츠</string>
 </resources>
