--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="home_title">당신이 찾는 모든 지식 콘텐츠</string>
     <string name="reading_history_title">최근 읽은 아티클</string>
     <string name="new_article_link_title">새로운아티클</string>
+    <string name="artic_pick_title">아틱의선택</string>
 </resources>
