--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="reading_history_title">최근 읽은 아티클</string>
     <string name="new_article_link_title">새로운 아티클</string>
     <string name="artic_pick_title">아틱의 선택</string>
+    <string name="new_article_about_title">새로운 아티클</string>
+    <string name="new_article_about_read">아티클 읽기</string>
+    <string name="new_article_about_archive">아카이브의 다른 아티클</string>
+    <string name="new_article_about_showall">전체 보기</string>
 </resources>
