--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="new_article_about_showall">전체 보기</string>
     <string name="new_notification">새로운 알림</string>
     <string name="notification_old">읽은 알림</string>
+    <string name="read_storage_permission_warning">저장소 접근 권한이 없어서 이미지를 가져올 수 없어요.</string>
 </resources>
