--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="new_notification">새로운 알림</string>
     <string name="notification_old">읽은 알림</string>
     <string name="read_storage_permission_warning">저장소 접근 권한이 없어서 이미지를 가져올 수 없어요.</string>
+    <string name="kakao_login_fail">카카오 로그인 실패</string>
 </resources>
