--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="label_warning_delete_archive">삭제된 아카이브는 복구되지 않습니다.</string>
     <string name="delete">삭제</string>
     <string name="cancel">취소</string>
+    <string name="edit_archive">이름 변경</string>
 </resources>
